Add more test cases, validation, add pagination